--- a/app/assets/stylesheets/site/responsive.css.scss
+++ b/app/assets/stylesheets/site/responsive.css.scss
@@ -24,7 +24,7 @@
       padding: 5px 15px;
       
       ul {
-        margin-bottom: 7px;
+        margin: 0;
         padding: 0;
         &:before {
           display: none;
